borealis/borealis/src/snapshots/borealis__genc__tests__genc_display_snapshot.snap
---
source: borealis/src/genc.rs
expression: "Description {\n    name: \"arm64\".to_owned(),\n    endianness: Endianness::LittleEndian,\n    wordsize: 64,\n    fetchsize: 32,\n    registers: vec![RegisterSpace\n        {\n            size : 248, banks : vec!\n            [Bank\n            {\n                name : \"RBX\".to_owned(), typ : Typ :: Uint64, offset : 0,\n                count : 31, stride : 8, element_count : 1, element_size : 8,\n                element_stride : 8,\n            }],\n        }],\n    instructions: HashMap::new(),\n}"
---
/* GENERATED BY BOREALIS */

AC_ARCH(arm64)
{
	ac_mem Data(64, 64, little, 0);
	ac_mem Fetch(64, 64, little, 1);

	ac_wordsize 64;

	ac_regspace(248) {
		bank RBX (uint64, 0, 31, 8, 1, 8, 8);
	}
}

