borealis/borealis/src/snapshots/borealis__genc__tests__genc_display_snapshot_isa.snap
---
source: borealis/src/genc.rs
expression: isa
---
/* GENERATED BY BOREALIS */

AC_ISA(arm64)
{
	ac_fetchsize 32;
	ac_predicated "no";

	ISA_CTOR(arm) {
		ac_behaviours("behaviours.genc");
		ac_execute("execute.genc");
	};
}

