borealis/borealis/src/snapshots/borealis__genc__tests__genc_display_snapshot_main.snap
---
source: borealis/src/genc.rs
expression: main
---
/* GENERATED BY BOREALIS */

AC_ARCH(arm64)
{
	ac_mem Data(64, 64, little, 0);
	ac_mem Fetch(64, 64, little, 1);

	ac_wordsize 64;

	ac_regspace(248) {
		bank RBX (uint64, 0, 31, 8, 1, 8, 8);
	}

	ARCH_CTOR(arm) {
		ac_isa("isa.genc");
		set_endian("little");
	};
};

